--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
     "clean-webpack-plugin": "0.1.18",
+    "copy-webpack-plugin": "4.3.1",
     "css-loader": "0.28.9",
     "extract-text-webpack-plugin": "3.0.2",
     "html-webpack-plugin": "2.30.1",
